Correct the alignment on logo margin

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -29,7 +29,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-  margin: 0 16px;
+  margin-right: 16px;
 }
 
 ul {
